--- a/web/html/Hanoi_tower.html
+++ b/web/html/Hanoi_tower.html
@@ -55,7 +55,7 @@
         <a href="https://www.mathsisfun.com/games/towerofhanoi.html" target="_blank">Link mô hình minh họa tháp Hà Nội</a>
     </div>
     <div class="image-container">
-        <img src="/web/images/hanoi_disk.png" alt="a.png" style="max-width:100%; height:auto;">
+        <img src="./web/images/hanoi_disk.png" alt="a.png" style="max-width:100%; height:auto;">
     </div>
 
 </body>
