--- a/web/Hanoi_tower.html
+++ b/web/Hanoi_tower.html
@@ -40,7 +40,7 @@
     </ol>
 
     <p>Cây đệ quy khi n=3</p>
-    <img src="hanoi.png" alt=""Hanoi tower image" style="max-width:100%; height:auto;">
+    <img src="images/hanoi_disk.png" alt=""Hanoi tower image" style="max-width:100%; height:auto;">
     <p>Nhìn vào sơ đồ trên, đọc từ dưới lên trên, từ trái sang phải, nếu gặp Return thì dừng, ta sẽ có thứ tự sau:</p>
     <ul>
         <li>Chuyển đĩa 1 từ cột A đến cột C</li>
@@ -55,7 +55,7 @@
         <a href="https://www.mathsisfun.com/games/towerofhanoi.html" target="_blank">Link mô hình minh họa tháp Hà Nội</a>
     </div>
     <div class="image-container">
-        <img src="images/hanoi_disk.png" alt="a.png" style="max-width:100%; height:auto;">
+        <img src="images/hanoi.png" alt="a.png" style="max-width:100%; height:auto;">
     </div>
 
 </body>
