--- a/web/Hanoi_tower.html
+++ b/web/Hanoi_tower.html
@@ -13,6 +13,10 @@
     </style>
 </head>
 <body>
+    <div>
+        <a href="hhttps://github.com/IsaTran21/Leetcode/blob/main/README.md" target="_blank">Trở về Readme</a>
+    </div>
+    
 
     <h1>Bài toán tháp Hà Nội - dùng phương pháp đệ quy top-down intuition</h1>
 
