--- a/web/Hanoi_tower.html
+++ b/web/Hanoi_tower.html
@@ -58,6 +58,10 @@
     <div>
         <a href="https://www.mathsisfun.com/games/towerofhanoi.html" target="_blank">Link mô hình minh họa tháp Hà Nội</a>
     </div>
+    <div>
+        <a href="https://github.com/IsaTran21/Leetcode/blob/f9a9c640744da37e0641639bbc3316d979f01a4c/Hanoi_tower.py" target="_blank">Link code</a>
+    </div>
+    
     <div class="image-container">
         <img src="images/hanoi_disk.png" alt="a.png" style="max-width:100%; height:auto;">
     </div>
