--- a/web/Hanoi_tower.html
+++ b/web/Hanoi_tower.html
@@ -24,9 +24,9 @@
 
     <p>Quy tắc di chuyển trong bài toán Tháp Hà Nội như sau:</p>
     <ul>
-        <li>Chỉ có thể di chuyển một đĩa vào một lần.</li>
-        <li>Chỉ có thể đặt đĩa lớn hơn lên trên đĩa nhỏ hơn.</li>
-        <li>Các đĩa phải được di chuyển từ một trụ này sang trụ khác mà không sử dụng trụ thứ ba làm trung gian.</li>
+        <li>Chỉ có 3 cột để di chuyển.</li>
+        <li>Một lần chỉ được di chuyển một đĩa (không được di chuyển đĩa nằm giữa).</li>
+        <li>Một đĩa chỉ có thể được đặt lên một đĩa lớn hơn (không nhất thiết hai đĩa này phải có kích thước liền kề, tức là đĩa nhỏ nhất có thể nằm trên đĩa lớn nhất).</li>
     </ul>
 
     <ol>
