--- a/web/Hanoi_tower.html
+++ b/web/Hanoi_tower.html
@@ -11,6 +11,9 @@
             margin-left: 10px; /* Adjust margin as needed */
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <div>
@@ -58,6 +61,20 @@
     <div>
         <a href="https://www.mathsisfun.com/games/towerofhanoi.html" target="_blank">Link mô hình minh họa tháp Hà Nội</a>
     </div>
+    <b>Ví dụ code Python</b>
+    <pre><code class="python">
+        def Hanoi(n, source, auxi, dest):
+            if n == 1:
+                print(f"Chuyển đĩa 1 từ cột {source} đến cột {dest}")
+                return#Chỉ dừng lại và in ra nội dung trên
+            #Giả sử hàm Hanoi đã hoạt động "ok" trên subproblem (n-1)
+            Hanoi(n-1, source, dest, auxi)#Chuyển n-1 đĩa từ source đến auxi
+            #Mỗi một lần chuyển thành công từ n-1 từ source đến auxi thì
+            #ta đã chuyển thành công được một đĩa dưới lớn thì source đến dest, nên ta print ra
+            print(f"Chuyển đĩa {n} từ cột {source} đến cột {dest}")
+            Hanoi(n-1, auxi, source, dest)#chuyển n-1 đĩa từ auxi đến đích (sau khi đã chuyển xong đĩa lớn nhất đến dest)
+      Hanoi(3, 'A', 'B', 'C')
+    </code></pre>
     <div>
         <a href="https://github.com/IsaTran21/Leetcode/blob/f9a9c640744da37e0641639bbc3316d979f01a4c/Hanoi_tower.py" target="_blank">Link code</a>
     </div>
